[project]
name = "py-alive"
version = "0.0.1"
description = "Experimental aware runtime framework for Python."
readme = "README.md"
authors = [
    { name = "yuda", email = "yuda03979@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
py-alive = "py_alive:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
